# gtkhelloagain

./: meson.build
data/: hello-again.appdata.xml  hello-again.desktop  hello-again.desktop.in
po/: com.github.davidpeach.gtkhelloagain.pot  de.po  es.po
src/: Application.vala
